@@ -7,6 +7,8 @@
 	  SOA serial probes.  This fixes that probes fail because earlier
 	  probe addresses are unreachable.
 	- Fix that auth zone fails over to next master for timeout in tcp.
+	- Squelch SSL read and write connection reset by peer and broken pipe 
+	  messages.  Verbosity 2 and higher enables them.
 
 8 April 2019: Wouter
 	- Fix to use event_assign with libevent for thread-safety.
